@@ -89,13 +89,20 @@ App.VertexTasksController = Em.ObjectController.extend(App.PaginatedContentMixin
   defaultColumnConfigs: function() {
     return [
       {
-        id: 'taskId',
-        headerCellName: 'Task ID',
+        id: 'id',
+        headerCellName: 'Task Index',
         tableCellViewClass: Em.Table.TableCell.extend({
           template: Em.Handlebars.compile(
-            "{{#link-to 'task' view.cellContent class='ember-table-content'}}{{view.cellContent}}{{/link-to}}")
+            "{{#link-to 'task' view.cellContent.id class='ember-table-content'}}{{view.cellContent.displayId}}{{/link-to}}")
         }),
-        contentPath: 'id',
+        getCellContent: function (row) {
+          var id = row.get('id'),
+              idPrefix = 'task_%@_'.fmt(row.get('dagID').substr(4));
+          return {
+            id: id,
+            displayId: id.indexOf(idPrefix) == 0 ? id.substr(idPrefix.length) : id
+          };
+        }
       },
       {
         id: 'startTime',
