@@ -27,6 +27,7 @@
     {{page-nav-component
       hasPrev=hasPrev
       hasNext=hasNext
+      page=page
       navNext='navigateNext'
       navPrev='navigatePrev'
       navFirst='navigateFirst'
